# Mandelbrot-Viewer

./: CMakeLists.txt  README.md
include/: color.hpp  mandelbrot.hpp  renderer.hpp
src/: color.cpp  main.cpp  mandelbrot.cpp  renderer.cpp
